[package]
name = "egui"
version = "0.1.0"
edition = "2024"

[dependencies]
kamadak-exif = "0.6.1"
eframe = "0.33.2"
egui = "0.33.2"
egui_tabs = "0.2.1"
egui_dock = "0.18.0"
rfd = "0.16.0"
image = "0.25.9"
nalgebra = "0.34.1"
bytemuck = "1.24.0"
rusttype = "0.9.3"
ttf-parser = "0.25.1"
imageproc = "0.25.0"